--- a/dcnn-gan-minist.ipynb
+++ b/dcnn-gan-minist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,19 +18,25 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "定义变量"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "定义变量"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -43,21 +49,21 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "num_works = 4\n",
-    "batch_size = 256\n",
+    "batch_size = 64\n",
     "input_dim=100\n",
     "epochs = 1\n",
     "print(\"run on \",device.type)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   },
    "outputs": [],
    "source": [
     "from typing import Iterable\n",
@@ -69,17 +75,17 @@
     "    train_set = torchvision.datasets.MNIST(root=\"./data\",train=True,transform=torchvision.transforms.ToTensor(),download=True)\n",
     "    test_set = torchvision.datasets.MNIST(root=\"./data\",train=False,transform=torchvision.transforms.ToTensor(),download=True)\n",
     "    return td.DataLoader(dataset=train_set, batch_size=batch_siz, shuffle=True, num_workers=works,drop_last=True), td.DataLoader(dataset=test_set, batch_size=batch_siz, shuffle=True, num_workers=works,drop_last=True)\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   },
    "outputs": [],
    "source": [
     "class Discriminator(nn.Module):\n",
@@ -87,21 +93,22 @@
     "        super().__init__()\n",
     "        self.model = nn.Sequential(\n",
     "            # 28*28 -> (28 )/2 = 12*12\n",
-    "            nn.Conv2d(1, 32,kernel_size=3,padding=1, stride=2,dtype=torch.float32),\n",
-    "            nn.LeakyReLU(0.01),\n",
+    "            # nn.Conv2d(1, 32,kernel_size=3,padding=1, stride=2,dtype=torch.float32),\n",
+    "            # nn.LeakyReLU(0.01),\n",
     "            # 14,14 -> 7*7\n",
-    "            nn.Conv2d(32,64,kernel_size=3,padding=1,stride=2,dtype=torch.float32),\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.LeakyReLU(0.01),\n",
+    "            # nn.Conv2d(32,64,kernel_size=3,padding=1,stride=2,dtype=torch.float32),\n",
+    "            # nn.BatchNorm2d(64),\n",
+    "            # nn.LeakyReLU(0.01),\n",
     "            # 10 filters to 10 filters\n",
     "            # 7*7 -> 3*3\n",
-    "            nn.Conv2d(64, 128, kernel_size=3,stride=2,dtype=torch.float32),\n",
-    "            nn.LeakyReLU(0.02),\n",
-    "            nn.BatchNorm2d(128),\n",
+    "            # nn.Conv2d(64, 128, kernel_size=3,stride=2,dtype=torch.float32),\n",
+    "            # nn.LeakyReLU(0.02),\n",
+    "            # nn.BatchNorm2d(128),\n",
     "            nn.Flatten(),\n",
-    "            nn.Linear(128*3*3,10),\n",
-    "            # nn.ReLU()\n",
-    "            # nn.Linear(128,1),\n",
+    "            # nn.Linear(128*3*3,10),\n",
+    "            nn.Linear(28*28,128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128,10),\n",
     "            nn.Sigmoid()\n",
     "        ).to(device)\n",
     "        self.cnt=0\n",
@@ -160,76 +167,25 @@
     "def generate_random_seed(size):\n",
     "    random_data = torch.randn(size*batch_size).view(batch_size,size)\n",
     "    return random_data.to(device)\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "generate nums is run on  cpu\n",
-      "2.3368585109710693\n",
-      "2.1489381790161133\n",
-      "2.023455858230591\n",
-      "1.9598240852355957\n",
-      "1.8997929096221924\n",
-      "1.8605726957321167\n",
-      "1.8319669961929321\n",
-      "1.8174470663070679\n",
-      "1.761227011680603\n",
-      "1.7657605409622192\n",
-      "1.7399898767471313\n",
-      "1.7435168027877808\n",
-      "1.7090314626693726\n",
-      "1.6886435747146606\n",
-      "1.6749978065490723\n",
-      "1.6808104515075684\n",
-      "1.6753184795379639\n",
-      "1.6733266115188599\n",
-      "1.6503156423568726\n",
-      "1.646734356880188\n",
-      "1.6524083614349365\n",
-      "1.6214808225631714\n",
-      "1.6492966413497925\n",
-      "1.6436840295791626\n",
-      "1.6389973163604736\n",
-      "1.601409912109375\n",
-      "1.617828607559204\n",
-      "1.5979033708572388\n",
-      "1.5815285444259644\n",
-      "1.5955071449279785\n",
-      "1.5858880281448364\n",
-      "1.602893590927124\n",
-      "1.5752931833267212\n",
-      "1.5841491222381592\n",
-      "1.6161779165267944\n",
-      "1.578624963760376\n",
-      "1.6027278900146484\n",
-      "1.5805777311325073\n",
-      "1.60039484500885\n",
-      "1.572749137878418\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "File \u001B[0;32m<timed exec>:16\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n",
-      "File \u001B[0;32m~/mambaforge/envs/py39/lib/python3.9/site-packages/torch/_tensor.py:307\u001B[0m, in \u001B[0;36mTensor.backward\u001B[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001B[0m\n\u001B[1;32m    298\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m has_torch_function_unary(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m    299\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m handle_torch_function(\n\u001B[1;32m    300\u001B[0m         Tensor\u001B[38;5;241m.\u001B[39mbackward,\n\u001B[1;32m    301\u001B[0m         (\u001B[38;5;28mself\u001B[39m,),\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    305\u001B[0m         create_graph\u001B[38;5;241m=\u001B[39mcreate_graph,\n\u001B[1;32m    306\u001B[0m         inputs\u001B[38;5;241m=\u001B[39minputs)\n\u001B[0;32m--> 307\u001B[0m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mautograd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgradient\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43minputs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/__init__.py:154\u001B[0m, in \u001B[0;36mbackward\u001B[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[0m\n\u001B[1;32m    151\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m retain_graph \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m    152\u001B[0m     retain_graph \u001B[38;5;241m=\u001B[39m create_graph\n\u001B[0;32m--> 154\u001B[0m \u001B[43mVariable\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_execution_engine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_backward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    155\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtensors\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgrad_tensors_\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    156\u001B[0m \u001B[43m    \u001B[49m\u001B[43mallow_unreachable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maccumulate_grad\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "CPU times: user 32.9 s, sys: 5.97 s, total: 38.8 s\n",
+      "Wall time: 7.86 s\n"
      ]
     }
    ],
@@ -247,26 +203,28 @@
     "        out = D.forward(it)\n",
     "    # y = torch.reshape(y,out.shape)\n",
     "        loss = F.cross_entropy(out,y)\n",
-    "        print(loss.item())\n",
+    "        # print(loss.item())\n",
+    "        # print(loss.sum())\n",
     "    # print(loss)\n",
     "        D.optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        D.optimizer.step()\n",
-    "\n",
+    "        # break\n",
+    "    # break\n",
     "# output = G.forward(generate_random_seed(input_dim))\n",
     "# img = output.detach().numpy().reshape(28,28)\n",
     "# plt.imshow(output.cpu().detach().numpy()[0], interpolation='none', cmap='Blues')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   },
    "outputs": [],
    "source": [
     "loss_metric = []\n",
@@ -277,38 +235,58 @@
     "    cnt+=1\n",
     "    if(cnt%10==0):\n",
     "        loss_metric.append(loss.item())\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.492141842842102, 1.4767476320266724, 1.4831912517547607]\n"
+      "[1.547363042831421, 1.523353934288025, 1.5411396026611328, 1.555657148361206, 1.5328975915908813, 1.5116971731185913, 1.5261415243148804, 1.5566644668579102, 1.54177725315094, 1.5050500631332397, 1.535434603691101, 1.5451445579528809, 1.5747623443603516, 1.5445125102996826, 1.5558316707611084]\n",
+      "torch.Size([64, 1, 28, 28])\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Tensor uint8 expected, got torch.float32",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jck/PycharmProjects/gan-learn/dcnn-gan-minist.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jck/PycharmProjects/gan-learn/dcnn-gan-minist.ipynb#ch0000007?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(img\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jck/PycharmProjects/gan-learn/dcnn-gan-minist.ipynb#ch0000007?line=5'>6</a>\u001b[0m boxes \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor([[\u001b[39m135\u001b[39m, \u001b[39m37\u001b[39m, \u001b[39m160\u001b[39m, \u001b[39m198\u001b[39m]], dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mint8)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jck/PycharmProjects/gan-learn/dcnn-gan-minist.ipynb#ch0000007?line=6'>7</a>\u001b[0m img0\u001b[39m=\u001b[39mtorchvision\u001b[39m.\u001b[39;49mutils\u001b[39m.\u001b[39;49mdraw_bounding_boxes(image\u001b[39m=\u001b[39;49mimg0,boxes\u001b[39m=\u001b[39;49mboxes,labels\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mimg0\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/grad_mode.py:28\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/grad_mode.py?line=24'>25</a>\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m     <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/grad_mode.py?line=25'>26</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m     <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/grad_mode.py?line=26'>27</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m():\n\u001b[0;32m---> <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torch/autograd/grad_mode.py?line=27'>28</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py:179\u001b[0m, in \u001b[0;36mdraw_bounding_boxes\u001b[0;34m(image, boxes, labels, colors, fill, width, font, font_size)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py?line=176'>177</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTensor expected, got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(image)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py?line=177'>178</a>\u001b[0m \u001b[39melif\u001b[39;00m image\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m torch\u001b[39m.\u001b[39muint8:\n\u001b[0;32m--> <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py?line=178'>179</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTensor uint8 expected, got \u001b[39m\u001b[39m{\u001b[39;00mimage\u001b[39m.\u001b[39mdtype\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py?line=179'>180</a>\u001b[0m \u001b[39melif\u001b[39;00m image\u001b[39m.\u001b[39mdim() \u001b[39m!=\u001b[39m \u001b[39m3\u001b[39m:\n\u001b[1;32m    <a href='file:///Users/jck/mambaforge/envs/py39/lib/python3.9/site-packages/torchvision/utils.py?line=180'>181</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mPass individual images, not batches\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Tensor uint8 expected, got torch.float32"
      ]
     }
    ],
    "source": [
-    "# print(loss_metric)\n",
-    "# output = G.forward(generate_random_seed(input_dim))\n",
-    "# img = output.detach().numpy().reshape(28,28)\n",
-    "# plt.imshow(output.detach().numpy()[0], interpolation='none', cmap='Blues')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(loss_metric)\n",
+    "output = G.forward(generate_random_seed(input_dim))\n",
+    "img = output.reshape(64,1,28,28)\n",
+    "img0 = img[0]\n",
+    "print(img.shape)\n",
+    "boxes = torch.tensor([[135, 37, 160, 198]], dtype=torch.int8)\n",
+    "img0=torchvision.utils.draw_bounding_boxes(image=img0,boxes=boxes,labels=\"img0\")\n",
+    "# torchvision.utils.save_image(img,\"imgs/%d.png\" % 0)\n",
+    "# plt.imshow(img0, interpolation='none', cmap='Blues')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -320,14 +298,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
