--- a/cycle-gan.ipynb
+++ b/cycle-gan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,34 @@
     "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1334"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "from PIL import Image\n",
+    "path = './data'\n",
+    "set_name = 'horse2zebra'\n",
+    "imgs =glob.glob(os.path.join(path, set_name, 'trainB') + '/*.*')\n",
+    "Image.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -36,6 +64,7 @@
     "import zipfile\n",
     "import os\n",
     "def get_data_from_dataset(dataset:str):\n",
+    "    horse2zebra_url = 'https://people.eecs.berkeley.edu/~taesung_park/CycleGAN/datasets/horse2zebra.zip'\n",
     "    res = requests.get(horse2zebra_url,stream=True)\n",
     "    total_length = int(res.headers.get('content-length'))\n",
     "    chunk_size = 1024*1024\n",
